[+] Move initialization to Game class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(SDL2 CONFIG REQUIRED)
 if(ANDROID)
   add_library(main SHARED main.cpp)
 else()
-  add_executable(main main.cpp)
+  add_executable(main main.cpp Game.cpp)
 endif()
 
 target_link_libraries(main
